# taskdroid

./: .gitignore  CHANGELOG.md  pubspec.yaml
.github/workflows/: flutter-build.yml
integration_test/: simple_test.dart
lib/models/: filter_tab.dart  task_context.dart  task_virtual_flags.dart
lib/providers/: profile_state.dart  task_state.dart
lib/services/: calendar_service.dart  credentials_storage.dart  sync_isolate_service.dart  task_context_service.dart  task_filter_evaluator.dart  task_filter_service.dart  task_query_autocomplete.dart  task_query_language.dart  task_query_syntax.dart  task_queue_service.dart  task_repository.dart  task_selection_service.dart  task_tab_service.dart  write_query_parser.dart
lib/src/rust/: api.dart  frb_generated.dart
lib/views/: home.dart  settings.dart  task_detail.dart
lib/widgets/: tag_input.dart  task_editor.dart  task_list.dart
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs
rust/src/core/: compat.rs  manager.rs  mod.rs  query_language.rs  utils.rs
test/: task_query_autocomplete_test.dart  task_query_language_test.dart  widget_test.dart
